删除不必要的文件

--- a/pages/index/medical-tools/hepatitis-b/hepatitis-b-self-test-result/hepatitis-b-self-test-result.wxss
+++ b/pages/index/medical-tools/hepatitis-b/hepatitis-b-self-test-result/hepatitis-b-self-test-result.wxss
@@ -13,3 +13,6 @@ item-zhu/* pages/index/medical-tools/hepatitis-b/hepatitis-b-self-test-result/he
   display: block;
 
 }
+.containerView{
+  padding: 20rpx;
+}
