--- a/pages/into-hospital/index/index.wxml
+++ b/pages/into-hospital/index/index.wxml
@@ -46,7 +46,7 @@
              <image src="{{item.picName}}" style="border-radius: 92rpx" class='img-face-lg' wx:if="{{item.picName}}"></image>
       <image src='/style/svg/expert.svg' class='img-face-lg' wx:else></image>
             <text class='txt-h4'>{{item.name}}</text>
-            <text class='txt-p'>{{item.underDepts[0].name}}</text>
+            <!-- <text class='txt-p'>{{item.underDepts[0].name}}</text> -->
           </li>
         </ul>
       </view>
