--- a/pages/record/appointment-record-detail/appointment-record-detail.wxml
+++ b/pages/record/appointment-record-detail/appointment-record-detail.wxml
@@ -2,15 +2,19 @@
 <!-- 预约详情 -->
 <view class='am-panel fee-panel'>
   <view class='bd'>
+    <view class='form-fee-item am-flex-item'>
+      <view class='form-fee-label form-fee-label'>预约人</view>
 
+      <view class='am-flex-after'>
+        <text class='am-mr-5'>{{data.patient.name}}</text>
+      </view>
+    </view>
     <view class='form-fee-item am-flex-item'>
       <view class='form-fee-label form-fee-label'>科室</view>
       <view class='am-flex-after'>
         <text>{{data.dept.deptName}}</text>
       </view>
     </view>
-    <!-- form-fee-item end-->
-    <!-- form-fee-item -->
     <view class='form-fee-item am-flex-item'>
       <view class='form-fee-label form-fee-label'>科室位置</view>
 
@@ -18,14 +22,12 @@
         <text class='am-mr-5'>{{data.dept.location}}</text>
       </view>
     </view>
-    <!-- form-fee-item end-->
     <view class='form-fee-item am-flex-item' wx:if="{{data.doctor}}">
       <view class='form-fee-label form-fee-label'>医生</view>
       <view class='am-flex-after'>
         <text>{{data.doctor.name}}</text>
       </view>
     </view>
-    <!-- form-fee-item -->
     <view class='form-fee-item am-flex-item'>
       <view class='form-fee-label form-fee-label'>就诊日期</view>
       <view class='am-flex-after'>
@@ -34,32 +36,27 @@
         <text wx:elif="{{data.regTime=='AFTERNOON'}}">下午</text>
         <text wx:else>晚上</text>
         <text wx:if="{{data.visitTime}}">\t{{data.visitTime}}</text>
-
       </view>
     </view>
-    <!-- form-fee-item end-->
-    <!-- form-fee-item -->
     <view class='form-fee-item am-flex-item'>
-      <view class='form-fee-label form-fee-label'>门诊号</view>
+      <view class='form-fee-label form-fee-label'>医师服务费</view>
       <view class='am-flex-after'>
-        <text>{{data.medicalCardNo}}</text>
+        <text>￥{{data.regFee}}</text>
       </view>
     </view>
     <!-- form-fee-item end-->
     <view class='form-fee-item am-flex-item'>
       <view class='form-fee-label form-fee-label'>预约状态</view>
       <view class='am-flex-after'>
-        <text class='am-txt-muted txt-rsmall'>{{statusList[item.status]}}</text>
+        <text class='am-txt-muted txt-rsmall'>{{statusList[data.status]}}</text>
       </view>
     </view>
   </view>
   <view class='ft b-sh-t'>
-    <!-- form-fee-item -->
     <view class='form-fee-item am-flex-item'>
       <view class='am-flex-title form-fee-label'>交易单号</view>
       <view class='am-flex-after'>{{data.zhpTradeId}}</view>
     </view>
-    <!-- form-fee-item end-->
   </view>
 </view>
 <view class="zan-btns">
