--- a/pages-index/clinic/clinic-info/clinic-info.wxml
+++ b/pages-index/clinic/clinic-info/clinic-info.wxml
@@ -28,7 +28,7 @@
     <view class='form-fee-item'>
       <view class='form-fee-label'>就诊人</view>
       <view class='form-fee-control'>
-        <text class='am-mr-10'>{{medicalCard.name}}</text>
+        <text>{{medicalCard.name}}</text>
         <!-- <text class="am-txt-muted">{{medicalCard.medicalCardNo}}</text> -->
       </view>
     </view>
@@ -43,7 +43,7 @@
     <view class='form-fee-item' wx:if="{{dept.location}}">
       <view class='form-fee-label'>科室位置</view>
       <view class='form-fee-control'>
-        <text class='am-mr-10'>{{dept.location}}</text>
+        <text>{{dept.location}}</text>
         <i class="i-map-location"></i>
       </view>
     </view>
