--- a/pages-index/clinic/expert-schedule/expert-schedule.wxml
+++ b/pages-index/clinic/expert-schedule/expert-schedule.wxml
@@ -45,8 +45,7 @@
       </view>
     </block>
     <block>
-      <view class='content-title'>
-        <image src='../../../../style/image/specialize.png'></image>
+      <view class='content-title has-left-badge'>
         <text>擅长</text>
       </view>
       <view class='content-content color-1'>
@@ -75,11 +74,11 @@
               <text>{{schedules[item.time]}}</text>
             </view>
             <view>
-              <text space="true" class="font-12 color-1">专家</text>
+              <text space="true" class="font-12 color-1">{{item.clinicLabel}}</text>
               <text class="font-12 color-2">￥{{item.price}}</text>
               </view>
           </view>
-          <view class="schedule-right" bindtap='chooseSchedule' data-schedule="{{item.id}}">
+          <view class="schedule-right" bindtap="methodNeedLogin" data-method="chooseSchedule"  data-schedule="{{item.id}}">
           余{{item.num}}              
           </view>
         </view>
