--- a/pages/center/member-info/member-info.wxml
+++ b/pages/center/member-info/member-info.wxml
@@ -11,13 +11,13 @@
       <view class="list-item wx-row item-bot-line">
         <view class="lable">姓　名</view>
         <view class="lable-input">
-          <input name='name' value="{{member.name}}" placeholder="请输入真实姓名"></input>
+          <input name='name' bindfocus="alertWarning" bindinput='nameChange' value="{{member.name}}" placeholder="请输入真实姓名"></input>
         </view>
       </view>
       <view class="list-item wx-row item-bot-line">
-        <view class="lable">身份证</view>
+        <view class="lable">证件号</view>
         <view class="lable-input">
-          <input type='idcard' name='idNo' value="{{member.idNo}}" placeholder="请输入真实身份证号" bindinput='idNoChange'></input>
+          <input type='idcard' bindfocus="alertWarning" name='idNo' value="{{member.idNo}}" placeholder="请输入真实身份证号" bindinput='idNoChange'></input>
 
         </view>
       </view>
@@ -43,7 +43,7 @@
       <view class="list-item wx-row item-bot-line full">
         <view class="lable">手机号</view>
         <view class="lable-input">
-          <input type='number' name='mobileNo' value="{{member.mobileNo}}" placeholder="请输入手机号"></input>
+          <input type='number' name='mobileNo' bindinput='mobileNoChange' value="{{member.mobileNo}}" placeholder="请输入手机号"></input>
         </view>
       </view>
     </view>
@@ -52,7 +52,7 @@
     <view class="bg-light" style="margin-top:30rpx;">
       <view class="list-item wx-row item-bot-line card-list-title">
         <view class="left wx-col">就诊卡信息</view>
-        <view class="right wx-col text-right" bindtap='showPage' data-url='../card-info/card-info?personId={{member.id}}'>
+        <view class="right wx-col text-right" bindtap='showAddCardPage'>
           + 添加就诊卡
         </view>
       </view>
