--- a/pages/index/medical-tools/bmi/bmi-result/bmi-result.wxml
+++ b/pages/index/medical-tools/bmi/bmi-result/bmi-result.wxml
@@ -1,24 +1,21 @@
-
-<view class="containerView">
-<view>
-<text style='padding:10px'> BMI = 体重kg ÷ 身高㎡。是世界卫生组织认定的胖瘦判断以及是否健康的标准，适用于成年男女。</text>
-<view style='display:block'>
-<text class='result-type'>您的BMI是:{{result}}</text>
-<text class='sort-type' style='padding-left: 40px'>体型:{{sort}}</text>
-</view>
-<view style='dispay:block;text-align:center'>
-<text class='sort-type'>（身高：{{height}} cm 体重：{{weight}} kg)</text>
-</view>
-
+<view class="containerView" style='padding:20rpx'>
+  <view>
+    <text> BMI = 体重kg ÷ 身高㎡。是世界卫生组织认定的胖瘦判断以及是否健康的标准，适用于成年男女。</text>
+    <view style='display:block'>
+      <text class='result-type'>您的BMI是:{{result}}</text>
+      <text class='sort-type' style='padding-left: 40px'>体型:{{sort}}</text>
+    </view>
+    <view style='dispay:block;text-align:center'>
+      <text class='sort-type'>（身高：{{height}} cm 体重：{{weight}} kg)</text>
+    </view>
 
 
- <view class="bmi-img-result-wrapper">
-    <view class="point" style='left:{{left}}px'></view>
-    <view class="img-result-bar"></view>
+
+    <view class="bmi-img-result-wrapper">
+      <view class="point" style='left:{{left}}px'></view>
+      <view class="img-result-bar"></view>
+    </view>
+
   </view>
-
+  <text>{{tip}}</text>
 </view>
-<text>{{tip}}</text>
-</view>
-
-
