--- a/pages/record/appointment-record-detail/appointment-record-detail.wxss
+++ b/pages/record/appointment-record-detail/appointment-record-detail.wxss
@@ -1,11 +1,13 @@
 /* pages/record/appointment-record-detail/appointment-record-detail.wxss */
-.model{
+
+.model {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
 }
+
 .confirm-modal {
   z-index: 20;
   position: fixed;
@@ -17,29 +19,38 @@
   background: #fff;
   text-align: center;
 }
+
 .modal-notice-txt {
-  color: #333
+  color: #333;
 }
+
 .input-wrapper {
-  height: 90rpx;
-  line-height: 90rpx;
+  position: relative;
   vertical-align: middle;
+  height: 80rpx;
 }
+
 .pw-input {
-  display: inline-block;
+  padding-top: 17rpx;
+  text-align: left;
+  padding-left: 40rpx;
 }
+
 .btn-wrapper {
   display: flex;
 }
+
 .btn {
   border-top: 1px solid #eee;
   padding: 20rpx 0;
   width: 50%;
 }
+
 .confirm-btn {
   border-left: 1px solid #eee;
   color: green;
 }
+
 .mask {
   z-index: 10;
   position: absolute;
