--- a/style/wxss/common.wxss
+++ b/style/wxss/common.wxss
@@ -16,6 +16,9 @@ textarea {
   border-radius: 0;
   /*-webkit-tap-highlight-color:rgba(0,0,0,0);*/
 }
+input{
+  padding-top: 4rpx;
+}
 page {
   color: #111;
   font-size: 28rpx;
@@ -132,7 +135,7 @@ ul, li{
   box-sizing: border-box;
   border: none;
   outline: none;
-  padding: 0;
+  padding: 0 20rpx;
 }
 .input-text:focus{
   color: #111;
